--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,10 @@
 body {
   font-family: 'Roboto', sans-serif;
 }
+
+.image {
+  border-style: dashed;
+  border-color:#8a2be2;
+  border-width: 10px;
+  border-radius: 1;
+}
