--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,10 @@ body {
   border-width: 10px;
   border-radius: 1;
 }
+
+
+@media only screen and (max-width: 600px) {
+  #dissapearing_button {
+    display: none;
+  }
+}
