--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@ body {
   border-radius: 1;
 }
 
+.link:hover{
+  color:rgb(0, 255, 255);
+}
+
+.link:active {
+  color:chocolate;
+}
+
 
 @media only screen and (max-width: 600px) {
   #dissapearing_button {
