Added text decorations

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+h2 {
+  color: cadetblue;
+  text-decoration: wavy;
+  text-align: center;
+}
+
 .image {
   border-style: dashed;
   border-color:#8a2be2;
