--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-h2 {
+h1, h2, h3 {
   color: cadetblue;
   text-decoration: wavy;
   text-align: center;
