--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,16 @@ table > caption {
   background-color: darkorange;
 }
 
+/*Adjacent sibling combinator */
+img ~ figcaption {
+  background-color: goldenrod;
+}
+
+div.radio_form{
+  height:150px;
+  width: 200px;
+}
+
 .image {
   border-style: dashed;
   border-color:#8a2be2;
