--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,26 @@ div.radio_form{
   width: 200px;
 }
 
+.projects {
+  margin-top:10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.like_list {
+  margin: 10px 10px 10px 10px;
+}
+
+.video{
+  margin: auto;
+}
+
 .image {
   border-style: dashed;
   border-color:#8a2be2;
   border-width: 10px;
-  border-radius: 1;
+  border-radius: 1px;
 }
 
 .link:hover{
