--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,19 @@ div.radio_form{
   color:chocolate;
 }
 
+.board {
+  display: grid;
+  grid-template-columns:150px 150px;
+  grid-template-rows: auto auto auto;
+
+}
+
+.square {
+  background-color:lightsalmon;
+  border: 7px yellow solid;
+  text-align: center;
+}
+
 
 @media only screen and (max-width: 600px) {
   #dissapearing_button {
