--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 * {
-  background-color: hsla(48, 100%, 93%);
+  background-color: hsla(48, 100%, 93%,1);
 }
 
 body {
@@ -22,7 +22,7 @@ table > caption {
   background-color: hsl(33, 100%, 50%);
 }
 
-aside > p {
+aside + p {
   padding: 1em;
 }
 
@@ -82,7 +82,7 @@ div.radio_form{
 }
 
 .link:hover{
-  color:rgba(0, 255, 255);
+  color:rgba(0, 255, 255,1);
 }
 
 .link:active {
@@ -92,7 +92,7 @@ div.radio_form{
 .board {
   display: grid;
   grid-template-columns:150px 150px;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto;
 
 }
 
