--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ div.radio_form{
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: flex-start;
 }
 
 .link:hover{
@@ -93,6 +94,7 @@ div.radio_form{
   display: grid;
   grid-template-columns:150px 150px;
   grid-template-rows: auto auto;
+  column-gap: 1mm;
 
 }
 
